Add input_handler that listen to keyboard events

--- a/module/Kbuild
+++ b/module/Kbuild
@@ -1,4 +1,4 @@
 # SPDX-License-Identifier: GPL-2.0
 
 obj-m += lk2.o
-lk2-objs := lk2_main.o lk2_ring.o lk2_format.o
+lk2-objs := lk2_main.o lk2_ring.o lk2_format.o lk2_input.o
